# loveSite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG_fr.md  CODE_OF_CONDUCT_fr.md  CONTRIBUTING_fr.md  Dockerfile  LICENSE  README.md  SECURITY_fr.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
love_site/: LICENSE  README.md  pyproject.toml
love_site/app/: __init__.py  config.py  main.py
love_site/app/data/: messages.json
love_site/app/routes/: home.py
love_site/app/services/: messages.py
love_site/app/static/css/: style.css
love_site/app/static/js/: animation.js  file-input.js  hearts.js
love_site/app/templates/: base.html  index.html
love_site/docs/: README_fr.md  architecture.md  architecture_fr.md  deployment_fr.md  quickstart_fr.md  testing_strategy.md  testing_strategy_fr.md  troubleshooting_fr.md  workflow.md  workflow_fr.md
love_site/tests/application/: test_app.py
love_site/tests/integration/: test_home_route.py
love_site/tests/unit/: test_messages.py
